--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <!-- SEO Essentials -->
-  <title>ProFix Handyman Services - Professional Home Repairs & Maintenance in Portland, OR | Licensed & Insured</title>
+  <title>GESSEN Handyman Services - Professional Home Repairs & Maintenance in Portland, OR | Licensed & Insured</title>
   <meta name="description" content="Professional handyman services in Portland, OR. Licensed & insured. Call (971) 299-2700 for expert home repairs, installations, and maintenance solutions.">
   <meta name="keywords" content="handyman Portland, home repairs, maintenance services, installation services, licensed contractor, Portland handyman company, ProFix, home improvement, fixture installation, furniture assembly">
   <meta name="author" content="ProFix Handyman Services">
@@ -30,7 +30,7 @@
       "latitude": 45.5152,
       "longitude": -122.6784
     },
-    "url": "https://profix-handyman.com",
+    "url": "https://gessen-handymen.netlify.app/",
     "sameAs": [
       "https://www.yelp.com/biz/profix-handyman-portland"
     ],
@@ -54,16 +54,16 @@
   </script>
 
   <!-- Open Graph -->
-  <meta property="og:title" content="ProFix Handyman Services - Professional Home Repairs in Portland, OR">
+  <meta property="og:title" content="GESSEN Handyman Services - Professional Home Repairs in Portland, OR">
   <meta property="og:description" content="Expert handyman services in Portland, OR. Licensed, insured, and satisfaction guaranteed.">
   <meta property="og:image" content="https://i.postimg.cc/mkFpggyh/logo-1.png">
-  <meta property="og:url" content="https://profix-handyman.com/">
+  <meta property="og:url" content="https://gessen-handymen.netlify.app/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="ProFix Handyman Services">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="ProFix Handyman Services - Professional Home Repairs">
+  <meta name="twitter:title" content="GESSEN Handyman Services - Professional Home Repairs">
   <meta name="twitter:description" content="Expert handyman services in Portland, OR">
   <meta name="twitter:image" content="https://i.postimg.cc/mkFpggyh/logo-1.png">
 
